2014-12-12 17:33 GMT change set for WI 218118

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>refinery_service_sample</name>
+	<name>data_load_sample</name>
 	<comment></comment>
 	<projects>
 	</projects>
